# rust-static-initializer

./: Cargo.toml  README.md
src/: lib.rs
static-initializer-macros/: Cargo.toml
static-initializer-macros/src/: lib.rs
